deploy/k8s/overlays/dev/apps/delete-non-apps.yaml
apiVersion: v1
kind: Service
metadata:
  name: alloy
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: loki
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: pyroscope
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: redis
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: tempo
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyroscope
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tempo
$patch: delete
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-state-metrics
$patch: delete
